# teleutils

./: README.md  pyproject.toml
docs/: How_to_Use_This_Template.md
src/teleutils/: __init__.py  _logging.py
src/teleutils/preprocessing/: __init__.py  _number_format.py  number_format.py
src/teleutils/robocalls/: __init__.py  _analyzers.py  _extractors.py  _transformers.py  analyzers.py  extractors.py  transformers.py
tests/: debug_normalize_numbers.py  test_normalize_number.py  tests.py
tests/assets/: sample_numbers.parquet
tests/notebooks/: desenvolvimento_chamadas_abusivas.ipynb  preprocessing_analysis.ipynb  testes_chamadas_abusivas.ipynb  testes_robocalls.ipynb
